fix: corrigir manifest.json para deploy no Vercel
PROBLEMA 1: Variáveis de Ambiente
- Supabase.js já usa import.meta.env.VITE_* corretamente
- Vercel NÃO lê .env.local
- Variáveis devem ser configuradas no Vercel Dashboard

PROBLEMA 2: Ícones PWA 404
- Manifest referenciava 10 ícones
- Apenas 4 ícones existem em /public/icons/
- Causava 404 em: icon-144x144.png, icon-72x72.png, etc.

SOLUÇÃO:
- Atualizado manifest.json para usar apenas ícones existentes:
  * icon-192x192.png ✅
  * icon-512x512.png ✅
  * maskable-icon-192x192.png ✅
  * maskable-icon-512x512.png ✅
- Removidos 6 ícones inexistentes
- Removidos ícones de shortcuts (não existem)
- Criado guia completo de deploy (vercel_deploy_guide.md)

PRÓXIMOS PASSOS:
1. Configurar variáveis no Vercel Dashboard:
   - VITE_SUPABASE_URL
   - VITE_SUPABASE_ANON_KEY
2. Redeploy no Vercel
3. Verificar PWA funcional

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,44 +16,8 @@
     "dir": "ltr",
     "icons": [
         {
-            "src": "/icons/icon-72x72.png",
-            "sizes": "72x72",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "/icons/icon-96x96.png",
-            "sizes": "96x96",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "/icons/icon-128x128.png",
-            "sizes": "128x128",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "/icons/icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "/icons/icon-152x152.png",
-            "sizes": "152x152",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
             "src": "/icons/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "/icons/icon-384x384.png",
-            "sizes": "384x384",
             "type": "image/png",
             "purpose": "any"
         },
@@ -81,25 +45,13 @@
             "name": "Tarefas de Hoje",
             "short_name": "Hoje",
             "description": "Ver tarefas do dia",
-            "url": "/profissional?view=today",
-            "icons": [
-                {
-                    "src": "/icons/shortcut-today.png",
-                    "sizes": "96x96"
-                }
-            ]
+            "url": "/profissional?view=today"
         },
         {
             "name": "Nova Tarefa",
             "short_name": "Nova",
             "description": "Criar nova tarefa",
-            "url": "/admin/tarefas/nova",
-            "icons": [
-                {
-                    "src": "/icons/shortcut-new.png",
-                    "sizes": "96x96"
-                }
-            ]
+            "url": "/admin/tarefas/nova"
         }
     ]
 }
