--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.2",
     "recharts": "^3.6.0"
