--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "supabase": "^2.67.3",
     "vite": "^5.4.21",
     "vite-plugin-pwa": "^1.2.0",
     "workbox-window": "^7.4.0"
